{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 114,
  "lineage": "4482d266-d0a8-c4fa-aeeb-3e8a032b663c",
  "resources": [
    {
      "module": "module.aws_elb",
      "mode": "managed",
      "type": "aws_elb",
      "name": "LibraryElb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:999707604253:loadbalancer/LibraryElb",
            "availability_zones": [
              "us-east-1b",
              "us-east-1c"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "desync_mitigation_mode": "defensive",
            "dns_name": "LibraryElb-287385760.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 5,
                "interval": 30,
                "target": "HTTP:3000/",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "LibraryElb",
            "idle_timeout": 60,
            "internal": false,
            "listener": [
              {
                "instance_port": 3000,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "LibraryElb",
            "security_groups": [
              "sg-0b301ebc06b481c63"
            ],
            "source_security_group": "999707604253/securegroupPublic",
            "source_security_group_id": "sg-0b301ebc06b481c63",
            "subnets": [
              "subnet-01f7bc5fd0bd93ec4",
              "subnet-089581dfaf5b48ccb"
            ],
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.aws_security_group.aws_security_group.securegroupPublic",
            "module.aws_subnet.aws_subnet.subnetPrivateLibrary",
            "module.aws_subnet.aws_subnet.subnetPublicLibrary",
            "module.aws_vpc.aws_vpc.library_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_elb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "targetLibraryPortTraffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:999707604253:targetgroup/targetLibraryPortTraffic/763f8f168732fa1a",
            "arn_suffix": "targetgroup/targetLibraryPortTraffic/763f8f168732fa1a",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:999707604253:targetgroup/targetLibraryPortTraffic/763f8f168732fa1a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "targetLibraryPortTraffic",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0626c45c8788fd3ad"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.library_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "libraryBastionHost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fc61db8544a617ed",
            "arn": "arn:aws:ec2:us-east-1:999707604253:instance/i-0a58b80f2f1324c52",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e7560fc796ed1a18",
                "volume_size": 14,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a58b80f2f1324c52",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Dgsoftwarekey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-084e51d4548df1472",
            "private_dns": "ip-10-0-0-67.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.67",
            "public_dns": "ec2-54-196-184-172.compute-1.amazonaws.com",
            "public_ip": "54.196.184.172",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e7560fc796ed1a18",
                "volume_size": 14,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0b301ebc06b481c63"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01f7bc5fd0bd93ec4",
            "tags": {
              "Name": "Bastion host"
            },
            "tags_all": {
              "Name": "Bastion host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b301ebc06b481c63"
            ]
          },
          "dependencies": [
            "module.aws_security_group.aws_security_group.securegroupPublic",
            "module.aws_subnet.aws_subnet.subnetPublicLibrary",
            "module.aws_vpc.aws_vpc.library_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "libraryServerWeb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fc61db8544a617ed",
            "arn": "arn:aws:ec2:us-east-1:999707604253:instance/i-003587f3b70e82271",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-06998d82e66769bc3",
                "volume_size": 14,
                "volume_type": "gp3"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-003587f3b70e82271",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Dgsoftwarekey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09d0a632d06ea371f",
            "private_dns": "ip-10-0-0-175.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.175",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-06998d82e66769bc3",
                "volume_size": 14,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0b607dec5b4634036"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-089581dfaf5b48ccb",
            "tags": {
              "Name": "Library Server Web"
            },
            "tags_all": {
              "Name": "Library Server Web"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0b607dec5b4634036"
            ]
          },
          "dependencies": [
            "module.aws_security_group.aws_security_group.securegroupPrivadte",
            "module.aws_subnet.aws_subnet.subnetPrivateLibrary",
            "module.aws_vpc.aws_vpc.library_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_internet_gateway",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "libraryInternet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:999707604253:internet-gateway/igw-0a333bf2d335d5827",
            "id": "igw-0a333bf2d335d5827",
            "owner_id": "999707604253",
            "tags": {
              "Name": "libraryInternet"
            },
            "tags_all": {
              "Name": "libraryInternet"
            },
            "vpc_id": "vpc-0626c45c8788fd3ad"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.library_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_network_acl",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "networkAclPrivateLibrary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:999707604253:network-acl/acl-051b4b6e7ce0ee359",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": -1,
                "icmp_type": -1,
                "ipv6_cidr_block": "",
                "protocol": "icmp",
                "rule_no": 98,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 3000,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 96,
                "to_port": 3000
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 54,
                "to_port": 80
              },
              {
                "action": "allow",
                "cidr_block": "11.0.0.128/25",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 21,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "11.0.0.128/25",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 18,
                "to_port": 22
              }
            ],
            "id": "acl-051b4b6e7ce0ee359",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 3000,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 96,
                "to_port": 3000
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 54,
                "to_port": 80
              },
              {
                "action": "allow",
                "cidr_block": "10.0.0.128/25",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 86,
                "to_port": 22
              }
            ],
            "owner_id": "999707604253",
            "subnet_ids": [
              "subnet-089581dfaf5b48ccb"
            ],
            "tags": {
              "Name": "networkAclPrivateLibrary"
            },
            "tags_all": {
              "Name": "networkAclPrivateLibrary"
            },
            "vpc_id": "vpc-0626c45c8788fd3ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_subnet.aws_subnet.subnetPrivateLibrary",
            "module.aws_vpc.aws_vpc.library_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_route_table",
      "mode": "managed",
      "type": "aws_eip",
      "name": "elasticIpLibrary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c2fd6a4cb3a06a56",
            "arn": "arn:aws:ec2:us-east-1:999707604253:elastic-ip/eipalloc-0c2fd6a4cb3a06a56",
            "domain": "vpc",
            "id": "eipalloc-0c2fd6a4cb3a06a56",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-35-153-43-186.compute-1.amazonaws.com",
            "public_ip": "35.153.43.186",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.aws_route_table",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_library",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c2fd6a4cb3a06a56",
            "association_id": "eipassoc-0e5bad2af2fb230d6",
            "connectivity_type": "public",
            "id": "nat-0037b640d8b3a6a14",
            "network_interface_id": "eni-0ac7560f068023d2a",
            "private_ip": "10.0.0.105",
            "public_ip": "35.153.43.186",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01f7bc5fd0bd93ec4",
            "tags": {
              "Name": "gw library"
            },
            "tags_all": {
              "Name": "gw library"
            }
          },
          "dependencies": [
            "module.aws_route_table.aws_eip.elasticIpLibrary",
            "module.aws_subnet.aws_subnet.subnetPublicLibrary",
            "module.aws_vpc.aws_vpc.library_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "subnetPrivateLibrary_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:999707604253:route-table/rtb-018970ad6c663e6e0",
            "id": "rtb-018970ad6c663e6e0",
            "owner_id": "999707604253",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0037b640d8b3a6a14",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "privateRouteTable"
            },
            "tags_all": {
              "Name": "privateRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0626c45c8788fd3ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_route_table.aws_eip.elasticIpLibrary",
            "module.aws_route_table.aws_nat_gateway.nat_gateway_library",
            "module.aws_subnet.aws_subnet.subnetPublicLibrary",
            "module.aws_vpc.aws_vpc.library_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "subnetPublicLibrary_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:999707604253:route-table/rtb-0099ffb06deb96dd6",
            "id": "rtb-0099ffb06deb96dd6",
            "owner_id": "999707604253",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a333bf2d335d5827",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "publicRouteTable"
            },
            "tags_all": {
              "Name": "publicRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0626c45c8788fd3ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_internet_gateway.aws_internet_gateway.libraryInternet",
            "module.aws_vpc.aws_vpc.library_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_route_table",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnetPrivateMederiAs_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0974c2d80a45d9a0e",
            "route_table_id": "rtb-018970ad6c663e6e0",
            "subnet_id": "subnet-089581dfaf5b48ccb"
          },
          "dependencies": [
            "module.aws_route_table.aws_eip.elasticIpLibrary",
            "module.aws_route_table.aws_nat_gateway.nat_gateway_library",
            "module.aws_route_table.aws_route_table.subnetPrivateLibrary_rt",
            "module.aws_subnet.aws_subnet.subnetPrivateLibrary",
            "module.aws_subnet.aws_subnet.subnetPublicLibrary",
            "module.aws_vpc.aws_vpc.library_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_route_table",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnetPubliclibraryAs_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c9935378a8261deb",
            "route_table_id": "rtb-0099ffb06deb96dd6",
            "subnet_id": "subnet-01f7bc5fd0bd93ec4"
          },
          "dependencies": [
            "module.aws_internet_gateway.aws_internet_gateway.libraryInternet",
            "module.aws_route_table.aws_route_table.subnetPublicLibrary_rt",
            "module.aws_subnet.aws_subnet.subnetPublicLibrary",
            "module.aws_vpc.aws_vpc.library_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "securegroupPrivadte",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:999707604253:security-group/sg-0b607dec5b4634036",
            "description": "Allow bastion host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Icmp ipv4",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Private security",
                "from_port": 3000,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Private security",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "11.0.0.128/25"
                ],
                "description": "ssh security",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "id": "sg-0b607dec5b4634036",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Icmp ipv4",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Private security",
                "from_port": 3000,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Private security",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "11.0.0.128/25"
                ],
                "description": "ssh security",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "securegroupPrivadte",
            "name_prefix": "",
            "owner_id": "999707604253",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "securegroupPrivadte"
            },
            "tags_all": {
              "Name": "securegroupPrivadte"
            },
            "timeouts": null,
            "vpc_id": "vpc-0626c45c8788fd3ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.library_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "securegroupPublic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:999707604253:security-group/sg-0b301ebc06b481c63",
            "description": "Allow bastion host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Icmp ipv4",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Port react",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Private security",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh security",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "id": "sg-0b301ebc06b481c63",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Icmp ipv4",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Port react",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Private security",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh security",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "securegroupPublic",
            "name_prefix": "",
            "owner_id": "999707604253",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "securegroupPublic"
            },
            "tags_all": {
              "Name": "securegroupPublic"
            },
            "timeouts": null,
            "vpc_id": "vpc-0626c45c8788fd3ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.aws_vpc.aws_vpc.library_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnetPrivateLibrary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:999707604253:subnet/subnet-089581dfaf5b48ccb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.128/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-089581dfaf5b48ccb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "999707604253",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnetPrivateLibrary"
            },
            "tags_all": {
              "Name": "subnetPrivateLibrary"
            },
            "vpc_id": "vpc-0626c45c8788fd3ad"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.library_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnetPublicLibrary",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:999707604253:subnet/subnet-01f7bc5fd0bd93ec4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01f7bc5fd0bd93ec4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "999707604253",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnetPublicLibrary"
            },
            "tags_all": {
              "Name": "subnetPublicLibrary"
            },
            "vpc_id": "vpc-0626c45c8788fd3ad"
          },
          "dependencies": [
            "module.aws_vpc.aws_vpc.library_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.aws_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "library_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:999707604253:vpc/vpc-0626c45c8788fd3ad",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/24",
            "default_network_acl_id": "acl-0713f328202f775ab",
            "default_route_table_id": "rtb-0cd114dcb285705b5",
            "default_security_group_id": "sg-0e2a5908a1bf3ab82",
            "dhcp_options_id": "dopt-84babfff",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0626c45c8788fd3ad",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cd114dcb285705b5",
            "owner_id": "999707604253",
            "tags": {
              "Name": "library_tf_vpc"
            },
            "tags_all": {
              "Name": "library_tf_vpc"
            }
          }
        }
      ]
    }
  ]
}